fix: add overflow-x hidden to html for preventing horizontal scroll

--- a/planapp/appstyle.css
+++ b/planapp/appstyle.css
@@ -24,6 +24,10 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+
+html{
+  overflow-x: hidden;
+}
 /* nice scroll bar */
 ::-webkit-scrollbar {
   width: 5px;
